2009-07-30  Xan Lopez  <xlopez@igalia.com>

Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=25535
        [GTK] object:state-changed:checked events missing for radio buttons and checkboxes

        Implement state-changed:checked for radio buttons and checkboxes.

        * accessibility/gtk/AXObjectCacheAtk.cpp:
        (WebCore::AXObjectCache::postPlatformNotification):
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setChecked):

Canonical link: https://commits.webkit.org/38180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46574 268f45cc-cd09-0410-ab3c-d52691b4dbfc