WebCore/accessibility/gtk/AXObjectCacheAtk.cpp
@@ -37,8 +37,13 @@ void AXObjectCache::attachWrapper(AccessibilityObject* obj)
     g_object_unref(atkObj);
 }
 
-void AXObjectCache::postPlatformNotification(AccessibilityObject*, const String&)
+void AXObjectCache::postPlatformNotification(AccessibilityObject* coreObject, const String& message)
 {
+    if (message == "AXCheckedStateChanged") {
+        if (!coreObject->isCheckboxOrRadio())
+            return;
+        g_signal_emit_by_name(coreObject->wrapper(), "state-change", "checked", coreObject->isChecked());
+    }
 }
     
 void AXObjectCache::handleFocusedUIElementChanged()
